Updated code to use Java 11 / Jetty 11. Optimized imports. HTTP/2 over HTTPS is broken